# codenames

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .ui-fix-memory.md  HANDOFF.md  Makefile  README.md  SETUP.md  UX_REVAMP_PLAN.md  app.py  bench.py  bench_clue.py  bench_feedback.py  bench_geom.json  bench_guesser.py  bench_intrinsic.py  bench_judge.json  bench_recovery.py  bench_results.json  board.csv  build_site.py  codenames_latent_space.html  copilot.html  exp_encoders.py  guesser.py  handoff.md  latent_space.template.html  methods.html  methods.template.html  morph.py  novita_eval.py  optuna_tune.py  oracle.py  probe.ipynb  probe.py  pyproject.toml  render.yaml  requirements.txt  spy.py  (+3 more)
board_reader/: README.md  __init__.py  __main__.py  board_to_csv.py  requirements.txt
data/: AMBIGUITY_OPENAI_NOTICE.md  ASSOC_HE_NOTICE.md  ASSOC_OPENAI_NOTICE.md  NUMBERBATCH_NOTICE.md  ROOT_LEXICON_NOTICE.md  SIMLEX_HE_NOTICE.md  assoc_he.tsv  assoc_he_openai.jsonl  bench_clue_baseline.json  bench_clue_promoted.json  blocklist_he.txt  build_ambiguity_openai.py  build_assoc_he.py  build_clue_vocab.py  build_clue_vocab_openai.py  build_numberbatch_he.py  build_root_lexicon.py  build_simlex_he.py  clue_vocab_broad.json  clue_vocab_content_1500.json  clue_vocab_openai.json  content_master_14000.json  content_master_v2_14000.json  content_master_v2_30000.json  curate_clue_vocab_openai.py  eval_compare_results.json  eval_compare_results_b2.json  extend_assoc_openai.py  gemini_balanced_tight_eval_results.json  gemini_cautious_eval_results.json  gemini_eval_results.json  merge_clue_vocab_model_ideas.py  numberbatch_he_vocab.json  optuna_results.json  simlex_he.tsv  tuned_profiles.json
docs/: engine-improvement-plan.md  original-eval.md  v1-eval-prompt.md
feedback/: feedback.jsonl
frontend/: index.html  package-lock.json  package.json  vite.config.ts
hf_space/: Dockerfile  README.md  app.py  copilot.html  deck_he.py  exp_encoders.py  methods.html  morph.py  probe.py  requirements.txt
notebooks/: probe.ipynb
presentation/: board-reader-flow.md
research/: README.md  __init__.py  bench.py  bench_clue.py  bench_feedback.py  bench_guesser.py  bench_intrinsic.py  bench_recovery.py  compare_encoders.py  eval.py  eval_compare.py  novita_eval.py  (+4 more)
(+223 files in other folders)
